--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,10 @@ dependencies:
   equatable: ^2.0.0
   flutter:
     sdk: flutter
-
+  retrofit: ^2.0.0-beta1
+  dio: ^4.0.0
+  built_value: ^8.0.6
+  json_annotation: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -33,6 +36,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  retrofit_generator: any
+  build_runner: any
+
+  # retrofit_generator: ^2.0.0-beta3
+  # build_runner: ^2.0.3
+  json_serializable: ^4.1.1
+  built_value_generator: ^8.0.6
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
