--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,13 +21,16 @@ environment:
   sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
-  equatable: ^2.0.0
   flutter:
     sdk: flutter
   retrofit: ^2.0.0-beta1
   dio: ^4.0.0
   built_value: ^8.0.6
   json_annotation: ^4.0.1
+  bloc: ^7.0.0
+  equatable: ^2.0.0
+  flow_builder: ^0.0.2
+  flutter_bloc: ^7.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
