--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   equatable: ^2.0.0
   flow_builder: ^0.0.2
   flutter_bloc: ^7.0.0
+  formz: ^0.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
