--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_config: ^2.0.0
+  google_maps_flutter: ^2.0.1
 
 dev_dependencies:
   flutter_test:
