--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_config: ^2.0.0
-  google_maps_flutter: ^2.0.1
+  google_maps_flutter: ^2.0.1  
+  geolocator: ^7.0.3
+
 
 dev_dependencies:
   flutter_test:
