--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations: # Add this line
+    sdk: flutter 
   retrofit: ^2.0.0-beta1
   dio: ^4.0.0
   built_value: ^8.0.6
@@ -44,6 +46,7 @@ dependencies:
   geolocator: ^7.0.3  
   geocoding: ^2.0.0
   shared_preferences: ^2.0.6
+  intl: ^0.17.0
 
 
 
@@ -65,6 +68,8 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
 
+  generate: true # Add this line
+  
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
